fix padding around success callout on mobile (on response page)

--- a/src/components/portal/v2/response/styles.module.scss
+++ b/src/components/portal/v2/response/styles.module.scss
@@ -68,3 +68,7 @@
   @include mixins.success-callout;
   margin-block-end: 36px;
 }
+
+.successCalloutContainer {
+  @include mixins.centered-container($pad-mobile: true);
+}
